# astroPi4

./: CMakeLists.txt
include/: apiwebindimanager.h  astrocurses.h  jsontools.h  screensaver.h
src/: apiwebindimanager.cpp  astrocurses.cpp  configurationXML.cpp  jsontools.cpp  main.cpp  objbutton.cpp  objwindow.cpp  pipeopen.cpp  screensaver.cpp  timerpthread.cpp
